<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homeimg"
    tools:context=".MainActivity">

    <!-- Vue en haut de l'écran -->

    <!-- Grille de CardViews -->
    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingLeft="20dp">

        <!-- Nom de l'application -->
        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/syndicemsi"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Nom de l'utilisateur -->
        <TextView
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hello_user"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/logout"
            android:textColor="@color/white" />


    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:rowCount="3"
        android:columnCount="2">

        <!-- CardView pour Home -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_home"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/home"
                    android:contentDescription="@string/home" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView pour Messagerie -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_messaging"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/message"
                    android:contentDescription="@string/messagerie" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messagerie"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView pour Tâches -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_tasks"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/taches"
                    android:contentDescription="@string/t_ches" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_ches"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView pour Annonces -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_announcements"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/annonces"
                    android:contentDescription="@string/annonces" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annonces"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView pour Documents -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_documents"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/dc"
                    android:contentDescription="@string/documents" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/documents"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView pour Carte -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_map"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/carte"
                    android:contentDescription="@string/carte" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carte"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </GridLayout>

</RelativeLayout>
